# auth-service

./: .env  .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py
app/core/: database.py  security.py  security_.py
app/middleware/: auth_middleware.py
app/models/: user.py
app/schemas/: user.py
app/services/: user_service.py
